Добавить обработку проверки заполнения в поступлении, реализации

--- a/smLab_test/src/Documents/ПриобретениеТоваровИУслуг/Forms/ФормаДокумента/Form.form
+++ b/smLab_test/src/Documents/ПриобретениеТоваровИУслуг/Forms/ФормаДокумента/Form.form
@@ -593,6 +593,10 @@
     <horizontalAlign>Left</horizontalAlign>
     <autoFill>true</autoFill>
   </autoCommandBar>
+  <handlers>
+    <event>FillCheckProcessingAtServer</event>
+    <name>ОбработкаПроверкиЗаполненияНаСервере</name>
+  </handlers>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
   <autoUrl>true</autoUrl>
@@ -632,6 +636,10 @@
     <commandBar/>
   </commandInterface>
   <extInfo xsi:type="form:DocumentFormExtInfo">
+    <handlers>
+      <event>BeforeWrite</event>
+      <name>ПередЗаписью</name>
+    </handlers>
     <repostOnWrite>true</repostOnWrite>
   </extInfo>
 </form:Form>
