Добавить заполнение колонки "Подразделение" (п.4)

--- a/smLab_test/src/Documents/РеализацияТоваровИУслуг/Forms/ФормаДокумента/Form.form
+++ b/smLab_test/src/Documents/РеализацияТоваровИУслуг/Forms/ФормаДокумента/Form.form
@@ -322,6 +322,10 @@
       <dataPath xsi:type="form:DataPath">
         <segments>Объект.Товары.Склад</segments>
       </dataPath>
+      <handlers>
+        <event>OnChange</event>
+        <name>ТоварыСкладПриИзменении</name>
+      </handlers>
       <extendedTooltip>
         <name>ТоварыСкладРасширеннаяПодсказка</name>
         <id>45</id>
