Добавить проведение документов Поступление, Реализация

--- a/smLab_test/src/Documents/РеализацияТоваровИУслуг/Forms/ФормаДокумента/Form.form
+++ b/smLab_test/src/Documents/РеализацияТоваровИУслуг/Forms/ФормаДокумента/Form.form
@@ -712,6 +712,18 @@
           <common>true</common>
         </userVisible>
       </cmiFragmentRecord>
+      <cmiFragmentRecord>
+        <command>AccumulationRegister.Продажи.StandardCommand.OpenByRecorder</command>
+        <userVisible>
+          <common>true</common>
+        </userVisible>
+      </cmiFragmentRecord>
+      <cmiFragmentRecord>
+        <command>AccumulationRegister.ОстаткиТоваров.StandardCommand.OpenByRecorder</command>
+        <userVisible>
+          <common>true</common>
+        </userVisible>
+      </cmiFragmentRecord>
     </navigationPanel>
     <commandBar/>
   </commandInterface>
