--- a/smLab_test/src/Documents/ПриобретениеТоваровИУслуг/Forms/ФормаДокумента/Form.form
+++ b/smLab_test/src/Documents/ПриобретениеТоваровИУслуг/Forms/ФормаДокумента/Form.form
@@ -662,6 +662,12 @@
           <common>true</common>
         </userVisible>
       </cmiFragmentRecord>
+      <cmiFragmentRecord>
+        <command>AccumulationRegister.ОстаткиТоваров.StandardCommand.OpenByRecorder</command>
+        <userVisible>
+          <common>true</common>
+        </userVisible>
+      </cmiFragmentRecord>
     </navigationPanel>
     <commandBar/>
   </commandInterface>
